# backend/controller/order.js
@@ -74,8 +74,9 @@ const OrderController = {
 
   // Update an existing Order
   updateOrder: async (req, res) => {
-    const { id } = req.params;
+    const id = req.params.id;
     const { userId, totalPrice, shippingAddress, orderStatus, orderDetails } = req.body;
+    console.log(userId, totalPrice, shippingAddress, orderStatus, orderDetails)
     try {
       const orderUpdate = await Order.findByPk(id);
       if (!orderUpdate) {
